# Delight

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  9.1.0  Mac_installation.md  README.md  pyproject.toml  requirements.txt  setup.py  setup_OLD.py
.github/workflows/: testing-and-coverage.yml
benchmarks/: asv.conf.json  benchmarks.py
delight/: __init__.py  photoz_kernels.py  photoz_kernels_cy.c  photoz_kernels_jx.py  photoz_kernels_py.py  utils_cy.c  utils_jx.py  utils_py.py
docs/: conf.py  index.rst  notebooks.rst
docs/notebooks/: Example-filling-missing-bands.ipynb  Tutorial-getting-started-with-Delight-hdf5.ipynb  Tutorial-getting-started-with-Delight.ipynb  Tutorial_interfaces_rail-with-Delight-hdf5.ipynb  Tutorial_interfaces_rail-with-Delight.ipynb  intro_notebook.ipynb  intro_notebook_lincc.ipynb  test_interfaces_rail.ipynb
docs/notebooks/tests/: README.ipynb  test_photoz_kernels.ipynb
docs/notebooks/tests_debug/: test_photoz_kernels.ipynb  test_photoz_kernels_cy.ipynb
docs/pre_executed/: Example-filling-missing-bands.ipynb  Paper - SN DES SIM.ipynb
docs_OLD/: conf.py
notebooks/: Tutorial - getting started with Delight.ipynb  tutorial_lsst.ipynb
scripts/: delight-apply-hdf5.py  delight-learn-hdf5.py  processSEDs.py  simulateWithSEDs-hdf5.py  templateFitting-hdf5.py
src/delight/: __init__.py  __init__.pyx  _version.py  io.py  photoz_kernels_cy.pyx  priors.py  utils.py  utils_cy.pyx
src/delight/interfaces/rail/: __init__.py  convertDESCcat.py  convertDESCcatOld.py  delightApply.py  delightLearn.py  getDelightRedshiftEstimation.py  libPriorPZ.py  makeConfigParam.py  processFilters.py  processSEDs.py  simulateWithSEDs.py  templateFitting.py
tests/: parametersTest.cfg  test_io.py  test_photoz_kernels.py  test_photoz_kernels_cy.py  test_photoz_kernels_jx.py  test_priors.py  test_sedmixture.py  test_utils.py  test_utils_jx.py  test_utils_py.py
tests/delight/: test_example_module.py
tests_notebooks/: test_photoz_kernels_jx.ipynb  test_utils_jx.ipynb
